--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,8 @@ a:hover {
     display: flex; 
     flex-direction: column;
     gap: 28px;
-    margin-top: 28px;
+    padding-top: 28px;
+    margin-bottom: 52px;
 }
 
 .title-two {
@@ -98,6 +99,33 @@ a:hover {
 }
 
 .text {
+    font-size: 16px;
+    color: #1F2937;
     width: 132px;
     text-align: center;
+}
+
+.section-three {
+    background-color: #e5e7eb;
+    padding: 52px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote, .quote-two {
+    color: #1F2937;
+    display: flex;
+    width: 700px;
+    justify-content: flex-end; 
+}
+
+.quote {
+    font-style: italic;
+    font-size: 28px;
+}
+
+.quote-two {
+    font-size: 18px;
+    font-weight: 800;
 }
