--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     font-family: Roboto, sans-serif;
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;  
 }
 
 .section-one{
@@ -11,13 +11,13 @@ body {
     background-color: #1F2937;
     padding: 16px;
     justify-content: space-evenly;
-
+    
 }
 
 .header-one, .header-two {
     display: flex;
     flex-direction: column;
-    margin-bottom: 72px;
+    padding-bottom: 72px;
     width: 400px;
     gap: 8px;
 }
@@ -26,7 +26,7 @@ body {
     color: chocolate;
     font-size: 24PX;
     font-weight: 800;
-    margin-bottom: 72px; 
+    padding-bottom: 72px; 
 }
 
 .title {
@@ -77,7 +77,7 @@ a:hover {
     flex-direction: column;
     gap: 28px;
     padding-top: 28px;
-    margin-bottom: 52px;
+    padding-bottom: 72px;
 }
 
 .title-two {
@@ -107,7 +107,7 @@ a:hover {
 
 .section-three {
     background-color: #e5e7eb;
-    padding: 52px;
+    padding: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -128,4 +128,38 @@ a:hover {
 .quote-two {
     font-size: 18px;
     font-weight: 800;
+}
+
+.section-four {
+    display: flex;
+    justify-content: center;
+}
+
+.action-alert {
+    background-color: #3882f6;
+    margin: 72px;
+    padding: 24px;
+    width: 800px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.action {
+    color: #f9faf8;
+    font-size: 24px;
+}
+
+.order button {
+    border: 2px solid #f9faf8;
+   
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #e5e7eb;
+    font-size: 18px;
+    padding: 16px;
+    text-align: center;
 }
